# BoardGame

./: 4x4tictactoe.h  5x5AI.h  5x5X_O.h  A2_S6_20230260_sheetpb5.cpp  BoardGame_Classes.h  CMakeLists.txt  FourInRowMinMax_Player.h  Four_in_row.h  Misere.h  MisereMinMaxPlayer.h  NumericalMinMaxPlayer.h  NumericalTicTacToe.h  Word_tictactoe.h  Word_tictactoe_AI.h  dic.txt  main.cpp  pyramic.h  pyramic_AI.h  ultimateTicTacToeHeader.h
